# toche

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  about.hbs  about.toml  build.rs  deny.toml  package.json
.akar/: HOOK_EVENTS.jsonl
.github/workflows/: ci.yml  prepare-release.yml
.hermes/plans/: 2026-07-20_070000-hotfix-schema-version.md
assets/filters/: README.md
benches/: pipeline.rs
docs/: ARCHITECTURE.md  BUG_TRACKER.md  NPM_PUBLISHING.md  REUSE_MAP.md  TOCHE_CONSOLIDATED_PLAN.md
docs/releases/: v1.0.10.md  v1.0.6.md  v1.0.7.md  v1.0.8.md  v1.0.9.md  v1.1.0.md
npm/: install.js  install.test.js
src/: lib.rs  main.rs
src/cache/: breakpoint.rs  inject.rs  mod.rs
src/cli/: cache.rs  checkpoint.rs  connect.rs  disconnect.rs  doctor.rs  expand.rs  graph.rs  mod.rs  run.rs  setup.rs  stats.rs  status.rs  storage.rs
src/config/: loader.rs  migration.rs  mod.rs  resolver.rs  toche_config.rs  utils.rs
src/continuity/: checkpoint.rs  mod.rs  observer.rs
src/efficiency/: config.rs  inject.rs  instructions.rs  mod.rs
src/gateway/: bounded_body.rs  mod.rs  routes.rs  server.rs
src/graphify/: adapter.rs  (+1 more)
tests/: cache_fixtures.rs  cli_connect.rs  cli_status.rs  continuity_fixtures.rs  efficiency_fixtures.rs  gateway_integration.rs  graphify_fixtures.rs  m12_failure_matrix.md  m12_failure_shard3.rs  m12_failure_shard4.rs  m12_failure_shard5.rs  m13_migration_audit.rs  m1b_storage_lifecycle.rs  m24_schema_version_sync.rs  reduce_fixtures.rs  safe_cache_fixtures.rs  shield_fixtures.rs
(+89 files in other folders)
